swagger-output is ok, endpoints is added but don't work
